@@ -1,3 +1,9 @@
+2019-11-08  Richard Biener  <rguenther@suse.de>
+
+	PR ipa/92409
+	* tree-inline.c (declare_return_variable): Properly handle
+	type mismatches for the return slot.
+
 2019-11-08  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR target/92095
